# krishivya_bot

./: .env.example  .gitignore  LICENSE  README.md  app.py  audio_utils.py  pyproject.toml  rag.py  stt_tts.py  telegram_bot.py
audio_utils/: audio_utils.py  stt_tts.py
bot/: rag.py  telegram_bot.py
llm_processing/: __init__.py  llm_service.py
