[project]
name = "agrisaathi"
version = "0.1.0"
description = "Multimodal AI Agriculture Telegram Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-cloud-aiplatform>=1.134.0",
    "google-genai>=1.60.0",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.1",
    "requests",
    "google-cloud-speech",
    "google-cloud-texttospeech",
    "pyngrok",
    "pydub",
    "flask-cors>=6.0.2",
    "flask-apscheduler>=1.13.1",
    "google-cloud-firestore>=2.14.0",
    "gunicorn>=25.1.0",
]
