[project]
name = "agrisaathi"
version = "0.1.0"
description = "Multimodal AI Agriculture Telegram Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "python-dotenv>=1.2.1",
    "requests",
    "pyngrok",
    "pydub",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.2.0",
    "flask-cors>=6.0.2",
    "flask-apscheduler>=1.13.1",
    "gunicorn>=25.1.0",
]
