[project]
name = "agrisaathi"
version = "0.1.0"
description = "Multimodal AI Agriculture Telegram Bot — powered by Google Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-apscheduler>=1.13.1",
    "python-dotenv>=1.2.1",
    "requests",
    "pydub",
    # GCP
    "google-cloud-aiplatform>=1.134.0",   # Vertex AI (Gemini)
    "google-cloud-speech>=2.0.0",          # Cloud Speech-to-Text v2
    "google-cloud-texttospeech>=2.0.0",    # Cloud Text-to-Speech
    "google-cloud-firestore>=2.14.0",      # Firestore (escalation / state)
    "gunicorn>=25.1.0",
    "pyngrok>=7.1.0",
    "google-genai>=1.0.0",
]
